cpp/c-api/include/dnv/vista/sdk/c/transport/datachannel/data_channel.h

    typedef struct dnv_vista_sdk_dcl_restriction dnv_vista_sdk_dcl_restriction_t;
    typedef struct dnv_vista_sdk_dcl_range dnv_vista_sdk_dcl_range_t;
    typedef struct dnv_vista_sdk_dcl_format dnv_vista_sdk_dcl_format_t;
    typedef struct dnv_vista_sdk_dcl_data_channel_type dnv_vista_sdk_dcl_data_channel_type_t;
    typedef struct dnv_vista_sdk_dcl_name_object dnv_vista_sdk_dcl_name_object_t;
    typedef struct dnv_vista_sdk_dcl_unit dnv_vista_sdk_dcl_unit_t;
    typedef struct dnv_vista_sdk_dcl_property dnv_vista_sdk_dcl_property_t;
    typedef struct dnv_vista_sdk_dcl_configuration_reference dnv_vista_sdk_dcl_configuration_reference_t;
    typedef struct dnv_vista_sdk_dcl_version_information dnv_vista_sdk_dcl_version_information_t;
    typedef struct dnv_vista_sdk_dcl_channel_id dnv_vista_sdk_dcl_channel_id_t;
    typedef struct dnv_vista_sdk_dcl_header dnv_vista_sdk_dcl_header_t;
    typedef struct dnv_vista_sdk_dcl_data_channel dnv_vista_sdk_dcl_data_channel_t;
    typedef struct dnv_vista_sdk_dcl_data_channel_list dnv_vista_sdk_dcl_data_channel_list_t;
    typedef struct dnv_vista_sdk_dcl_package dnv_vista_sdk_dcl_package_t;
    typedef struct dnv_vista_sdk_dcl_list_package dnv_vista_sdk_dcl_list_package_t;
    /** @brief Mirrors dnv::vista::sdk::transport::datachannel::Restriction::WhiteSpace */
    typedef enum
    {
        DNV_VISTA_SDK_DCL_WHITE_SPACE_PRESERVE = 0,
        DNV_VISTA_SDK_DCL_WHITE_SPACE_REPLACE,
        DNV_VISTA_SDK_DCL_WHITE_SPACE_COLLAPSE
    } dnv_vista_sdk_dcl_white_space_t;
    /*=====================================================================
     * Restriction - Table 19
     *===================================================================*/

    /** @brief Construct an empty Restriction (all fields unset) */
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_restriction_t* dnv_vista_sdk_dcl_restriction_create(void);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_free(dnv_vista_sdk_dcl_restriction_t* r);
    /** @brief Number of entries in the enumeration, or 0 if `r` is NULL or unset */
    DNV_VISTA_SDK_C_API size_t
    dnv_vista_sdk_dcl_restriction_enumeration_count(const dnv_vista_sdk_dcl_restriction_t* r);
    /**
     * @brief Get an enumeration entry by index
     * @return Null-terminated string, owned by `r`, or NULL if `r` is NULL, unset, or `index` out of range
     */
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_restriction_enumeration_at(
        const dnv_vista_sdk_dcl_restriction_t* r, size_t index);
    /**
     * @brief Set the enumeration of acceptable values
     * @param r Restriction to modify, must not be NULL
     * @param values Array of null-terminated strings, may be NULL if `count` is 0
     * @param count Number of entries in `values`
     */
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_enumeration(
        dnv_vista_sdk_dcl_restriction_t* r, const char* const* values, size_t count);
    /** @brief Clear the enumeration (unset) */
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_enumeration(dnv_vista_sdk_dcl_restriction_t* r);
    /** @brief 1 if fractionDigits is set, 0 otherwise */
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_fraction_digits(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API uint32_t
    dnv_vista_sdk_dcl_restriction_fraction_digits(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_fraction_digits(
        dnv_vista_sdk_dcl_restriction_t* r, uint32_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_fraction_digits(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API uint32_t dnv_vista_sdk_dcl_restriction_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_length(
        dnv_vista_sdk_dcl_restriction_t* r, uint32_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_length(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_max_exclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_restriction_max_exclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_max_exclusive(
        dnv_vista_sdk_dcl_restriction_t* r, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_max_exclusive(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_max_inclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_restriction_max_inclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_max_inclusive(
        dnv_vista_sdk_dcl_restriction_t* r, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_max_inclusive(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_max_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API uint32_t dnv_vista_sdk_dcl_restriction_max_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_max_length(
        dnv_vista_sdk_dcl_restriction_t* r, uint32_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_max_length(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_min_exclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_restriction_min_exclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_min_exclusive(
        dnv_vista_sdk_dcl_restriction_t* r, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_min_exclusive(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_min_inclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_restriction_min_inclusive(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_min_inclusive(
        dnv_vista_sdk_dcl_restriction_t* r, double value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_min_inclusive(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_min_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API uint32_t dnv_vista_sdk_dcl_restriction_min_length(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_min_length(
        dnv_vista_sdk_dcl_restriction_t* r, uint32_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_min_length(dnv_vista_sdk_dcl_restriction_t* r);
    /** @brief Get the pattern string, or NULL if `r` is NULL or unset */
    DNV_VISTA_SDK_C_API const char* dnv_vista_sdk_dcl_restriction_pattern(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_pattern(
        dnv_vista_sdk_dcl_restriction_t* r, const char* value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_pattern(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_total_digits(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API uint32_t dnv_vista_sdk_dcl_restriction_total_digits(const dnv_vista_sdk_dcl_restriction_t* r);
    /** @brief Sets the last error message and leaves `r` unchanged if `value` is 0 */
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_total_digits(
        dnv_vista_sdk_dcl_restriction_t* r, uint32_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_total_digits(dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_has_white_space(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_white_space_t
    dnv_vista_sdk_dcl_restriction_white_space(const dnv_vista_sdk_dcl_restriction_t* r);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_set_white_space(
        dnv_vista_sdk_dcl_restriction_t* r, dnv_vista_sdk_dcl_white_space_t value);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_restriction_clear_white_space(dnv_vista_sdk_dcl_restriction_t* r);
    /**
     * @brief Validate a string value against this restriction and a format
     * @return 1 if valid, 0 otherwise (with the first validation error set via
     *         dnv_vista_sdk_last_error_message()), or if any argument is NULL
     */
    DNV_VISTA_SDK_C_API int dnv_vista_sdk_dcl_restriction_validate_value(
        const dnv_vista_sdk_dcl_restriction_t* r, const char* value, const dnv_vista_sdk_dcl_format_t* format);
    /*=====================================================================
     * Range - Table 20
     *===================================================================*/

    /** @brief Construct a Range; sets the last error message and returns NULL if low >= high */
    DNV_VISTA_SDK_C_API dnv_vista_sdk_dcl_range_t* dnv_vista_sdk_dcl_range_create(double low, double high);
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_range_free(dnv_vista_sdk_dcl_range_t* range);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_range_low(const dnv_vista_sdk_dcl_range_t* range);
    DNV_VISTA_SDK_C_API double dnv_vista_sdk_dcl_range_high(const dnv_vista_sdk_dcl_range_t* range);
    /** @brief Sets the last error message and leaves `range` unchanged if low > current high */
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_range_set_low(dnv_vista_sdk_dcl_range_t* range, double low);
    /** @brief Sets the last error message and leaves `range` unchanged if high < current low */
    DNV_VISTA_SDK_C_API void dnv_vista_sdk_dcl_range_set_high(dnv_vista_sdk_dcl_range_t* range, double high);