bindings/rust/vista-sdk/src/ffi/transport/datachannel/data_channel.rs

use crate::ffi::core::local_id::dnv_vista_sdk_local_id_t;
use crate::ffi::transport::iso19848::dnv_vista_sdk_iso19848_value_t;
use crate::ffi::transport::serializable_document::dnv_vista_sdk_serializable_document_t;
use crate::ffi::transport::ship_id::dnv_vista_sdk_ship_id_t;
use crate::ffi::types::date_time_offset::dnv_vista_sdk_date_time_offset_t;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_restriction {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_restriction_t = dnv_vista_sdk_dcl_restriction;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_range {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_range_t = dnv_vista_sdk_dcl_range;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_format {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_format_t = dnv_vista_sdk_dcl_format;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_data_channel_type {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_data_channel_type_t = dnv_vista_sdk_dcl_data_channel_type;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_name_object {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_name_object_t = dnv_vista_sdk_dcl_name_object;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_unit {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_unit_t = dnv_vista_sdk_dcl_unit;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_property {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_property_t = dnv_vista_sdk_dcl_property;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_configuration_reference {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_configuration_reference_t =
    dnv_vista_sdk_dcl_configuration_reference;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_version_information {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_version_information_t = dnv_vista_sdk_dcl_version_information;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_channel_id {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_channel_id_t = dnv_vista_sdk_dcl_channel_id;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_header {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_header_t = dnv_vista_sdk_dcl_header;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_data_channel {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_data_channel_t = dnv_vista_sdk_dcl_data_channel;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_data_channel_list {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_data_channel_list_t = dnv_vista_sdk_dcl_data_channel_list;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_package {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_package_t = dnv_vista_sdk_dcl_package;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) struct dnv_vista_sdk_dcl_list_package {
    _opaque: [u8; 0],
}
#[allow(non_camel_case_types)]
pub(crate) type dnv_vista_sdk_dcl_list_package_t = dnv_vista_sdk_dcl_list_package;

#[allow(non_camel_case_types)]
#[repr(C)]
pub(crate) enum dnv_vista_sdk_dcl_white_space_t {
    Preserve = 0,
    Replace = 1,
    Collapse = 2,
}

extern "C" {
    // Restriction
    pub(crate) fn dnv_vista_sdk_dcl_restriction_create() -> *mut dnv_vista_sdk_dcl_restriction_t;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_free(r: *mut dnv_vista_sdk_dcl_restriction_t);
    pub(crate) fn dnv_vista_sdk_dcl_restriction_enumeration_count(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> usize;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_enumeration_at(
        r: *const dnv_vista_sdk_dcl_restriction_t,
        index: usize,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_enumeration(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        values: *const *const std::ffi::c_char,
        count: usize,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_enumeration(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_fraction_digits(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_fraction_digits(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> u32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_fraction_digits(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: u32,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_fraction_digits(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> u32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: u32,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_max_exclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_max_exclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_max_exclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_max_exclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_max_inclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_max_inclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_max_inclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_max_inclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_max_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_max_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> u32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_max_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: u32,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_max_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_min_exclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_min_exclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_min_exclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_min_exclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_min_inclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_min_inclusive(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_min_inclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: f64,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_min_inclusive(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_min_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_min_length(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> u32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_min_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: u32,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_min_length(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_pattern(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> *const std::ffi::c_char;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_pattern(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: *const std::ffi::c_char,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_pattern(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_total_digits(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_total_digits(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> u32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_total_digits(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: u32,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_total_digits(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_has_white_space(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> i32;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_white_space(
        r: *const dnv_vista_sdk_dcl_restriction_t,
    ) -> dnv_vista_sdk_dcl_white_space_t;
    pub(crate) fn dnv_vista_sdk_dcl_restriction_set_white_space(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
        value: dnv_vista_sdk_dcl_white_space_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_clear_white_space(
        r: *mut dnv_vista_sdk_dcl_restriction_t,
    );
    pub(crate) fn dnv_vista_sdk_dcl_restriction_validate_value(
        r: *const dnv_vista_sdk_dcl_restriction_t,
        value: *const std::ffi::c_char,
        format: *const dnv_vista_sdk_dcl_format_t,
    ) -> i32;

    // Range
    pub(crate) fn dnv_vista_sdk_dcl_range_create(
        low: f64,
        high: f64,
    ) -> *mut dnv_vista_sdk_dcl_range_t;
    pub(crate) fn dnv_vista_sdk_dcl_range_free(range: *mut dnv_vista_sdk_dcl_range_t);
    pub(crate) fn dnv_vista_sdk_dcl_range_low(range: *const dnv_vista_sdk_dcl_range_t) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_range_high(range: *const dnv_vista_sdk_dcl_range_t) -> f64;
    pub(crate) fn dnv_vista_sdk_dcl_range_set_low(range: *mut dnv_vista_sdk_dcl_range_t, low: f64);
    pub(crate) fn dnv_vista_sdk_dcl_range_set_high(
        range: *mut dnv_vista_sdk_dcl_range_t,
        high: f64,
    );
